# oso-poc

./: BUILD.bazel  README.md  WORKSPACE  go-oso.patch  go.mod  go.sum  main_test.go  policy.polar
